--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ numpy
 hnswlib
 sentence-transformers
 torch
-transformers
+transformers>=4.41.0
 accelerate
 beautifulsoup4
 python-docx
+huggingface-hub>=0.23.0
